server-side basic apps

--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,18 @@
 {
   "name": "mern-ts-boilerplate-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Boiler plate for server.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build-ts",
+    "build-ts": "tsc",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/index.ts",
+    "start": "npm run serve",
+    "serve": "ts-node src/index.ts",
+    "test": "(echo \"Testing core\" && NODE_ENV=test mocha --exit -r  ts-node/register src/**/*.spec.ts); (echo \"Testing apps\" && NODE_ENV=test mocha --exit -r ts-node/register src/apps/**/*.spec.ts)"
   },
   "keywords": [],
-  "author": "",
+  "author": "Siddharth Joshi",
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.14",
