--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/passport": "^1.0.4",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
